# saffron

./: .gitignore  ASSETS.txt  CMakeCache.txt  CMakeLists.txt  Makefile  RULES.TXT  TODO.txt  cmake_install.cmake  compile_commands.json  main.c  saffron.h
assets/: example_world.sfw
docs/: saffron_manual.md
examples/: basi.c  level_editor.c  model_viewer.c  sf.c  spnr.c  tw.c
sf_assets/sf_icons/: bmp_to_png.py
sf_assets/sf_sff/: Bldg.sff  Boulder.sff  Multitexbldg.sff  Prison.sff  Rock.sff  StudioCreation.sff  Tree.sff  bigtree.sff  bldg_out.sff  dumbtree.sff  example.sff  gen.sff  rooftest.sff  studio_out.sff  tree_out.sff  tree_out2.sff
sf_assets/sf_sfui/: example.sfui
sf_assets/sf_worlds/: example_world.sfw
sf_docs/: gen_docs.py  saffron_manual.md
sf_examples/: au.c  sf.c  sf_rockgen.c  sf_strike.c  sf_strike_ed.c  sf_studio.c  sf_treegen.c  sf_trees.c  sp.c  tw.c
sf_extras/: sf_gpu.h  sf_png2bmp.c  sf_sdl.h
sf_utils/: sf_reorganize.py
